# roundops

./: Cargo.toml  README.md
src/: lib.rs  roundops.rs
src/methods/: emulation.rs  emulation_unchecked.rs  hardware.rs  mod.rs  roughwrap.rs  roughwrap_unchecked.rs  succpred.rs  succpred_unchecked.rs
src/utils/: mod.rs  succpred.rs
