[package]
name = "roundops"
version = "0.0.6"
authors = ["GNQG"]
readme = "README.md"
license = "MIT"
description = "Rounded arithmetics for numerical types."
repository = "https://github.com/GNQG/roundops"
keywords = ["math", "number", "float", "rounding"]
categories = ["algorithms"]

[dependencies]
safeeft = "^0.0.4"
num-traits = "^0.1.40"
float-traits = "^0.0.2"
