[package]
name = "roundops"
version = "0.0.7"
authors = ["GNQG"]
readme = "README.md"
license = "MIT"
description = "Rounded arithmetics for numerical types."
repository = "https://github.com/GNQG/roundops"
keywords = ["math", "number", "float", "rounding"]
categories = ["algorithms"]

[dependencies]
safeeft = "^0.0.5"
num-traits = "^0.1.40"
float-traits = "^0.0.3"
fma = {version = "^0.1.0", optional = true}

[dev-dependencies]
rand = "^0.4.1"

[features]
use-fma = ["fma","safeeft/use-fma"]
doc = ["use-fma"]
